@@ -38,6 +38,10 @@
 <p>2014-12-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/delegate.c (InvokeDelegate): Windows spawnvp() splits
+arguments into more arguments.  Add escaping to avoid the
+splitting.  Resolves SourceForge bug #276 &quot;dcraw 9.19 included
+with gm 1.3.20 doesn't support paths with spaces.&quot;</li>
 <li>magick/utility.c (TranslateTextEx): Fix regression added on
 2014-12-13 (yesterday) which caused output file name passed to
 delegate programs to be wrong.</li>
