@@ -1,5 +1,10 @@
 2014-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/delegate.c (InvokeDelegate): Windows spawnvp() splits
+	arguments into more arguments.  Add escaping to avoid the
+	splitting.  Resolves SourceForge bug #276 "dcraw 9.19 included
+	with gm 1.3.20 doesn't support paths with spaces."
+
 	* magick/utility.c (TranslateTextEx): Fix regression added on
 	2014-12-13 (yesterday) which caused output file name passed to
 	delegate programs to be wrong.
